

			     BZFlag release notes

* improved /ban /banlist added reason and time parsing - Dennis Pedersen
* Shortened GM to 0.95 normal shot (tuneable) - Tim Riker
* tarball now supports "rpm -tb <foo>.tar.gz" - Tim Riker
* bzfs use only 1 port instead of 2 (by default IANA assigned: 5154) - Alfredo Tupone
* bots (-solo) game is by far more playable - Alfredo Tupone
* Added client-side chat filtering - Sean Morrison
* Configuration files and cache is stored in ~/.bzf/ on *IX - Lars Luthman
* Added team ID to shots for TK reasons (1.9.2) - Jeff Myers
* Changed version numbers to be xx.xx.xx and display with BuildOS and Build Date ( 1.9.0) - Jeff Myers & others for auto tools
* Added voting sytem with /poll, /vote, and /veto commands (1.9.0) - Sean Morrison
* Added bzadmin - Lars Luthman
* Munitions now bounce off buildings/ground in z direction - Dave Brosius
* World object and -worldsize paramaters - Jeff Myers
* Server side world parm (bzdb) file [clo] - Dave Brosius
* MsgTeamUpdate, MsgFlagUpdate coalesced - Dave Brosius
* Burrow Flag - Dave Brosius
* Observer is a first class team - Dave Brosius
* AutoPilot from 1.8 - Dave Brosius
* Thief Flag - Dave Brosius
* MsgPlayerUpdate now has order, reject ooo packets - Dave Brosius
* Removed old UDP queueing code and headers - Micah Dowty
* Convert closed FlagIds to flexible FlagDesc's - Micah Dowty, Dave Brosius
* Add back PNG support from 1.8 - Dave Brosius, Sean Morrison
* Add back BZDB from 1.8 - David Trowbridge, Dave Brosius
* Seer, Masquerade Flags - Dave Brosius
* Don't broadcast single player messages - Dave Brosius
* Customizable map size in maps - Jeff Myers
* Drive and Shoot thru options in maps - Jeff Myers
* Show Team kill score in Scoreboard - Dave Brosius
* Beginnings of flag 'negotiation' - Dave Brosius
* Pass reason in MsgKilled, add support for SR noise - Dave Brosius
* Remove unnessary MsgScore from player to server - Dave Brosius
* Remove old lag pings - Dave Brosius
* BeOS port - Francois Revol