@@ -2,6 +2,8 @@
 
 			     BZFlag release notes
 
+* Add /reset var server cmd - Dave Brosius
+* Add /set var value server cmd - Dave Brosius
 * improved /ban /banlist added reason and time parsing - Dennis Pedersen
 * Shortened GM to 0.95 normal shot (tuneable) - Tim Riker
 * tarball now supports "rpm -tb <foo>.tar.gz" - Tim Riker
